feat: update scripts

--- a/infer.ipynb
+++ b/infer.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/opt/homebrew/anaconda3/envs/torch-base/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
      ]
     },
@@ -31,18 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "prompt = \"\"\"\n",
-    "Below is an instruction that describes a task. Write a response that appropriately completes the request. ### Instruction: Write a Python program to count the most frequent numbers and output the result. ### Input: List of positive integers: [1, 5, 6, 7, 8]\n",
+    "Below is an instruction that describes a task. Write a response that appropriately completes the request. \n",
+    "### Instruction: Write a Python program to quick sort a list.\n",
+    "### Input: [1,2,2,3,4,5]\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,19 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import AutoModelForCausalLM\n",
     "\n",
-    "model = AutoModelForCausalLM.from_pretrained(\"save/completed/4\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"save/trl-sft/complete/1\")\n",
     "# model = AutoModelForCausalLM.from_pretrained(\"EleutherAI/pythia-410m\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -76,12 +80,43 @@
     }
    ],
    "source": [
-    "outputs = model.generate(inputs, max_new_tokens=100, do_sample=True, top_k=50, top_p=0.95)"
+    "outputs = model.generate(inputs, max_new_tokens=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'NoneType' object has no attribute 'cadam32bit_grad_fp32'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/anaconda3/envs/torch-base/lib/python3.11/site-packages/bitsandbytes/cextension.py:34: UserWarning: The installed version of bitsandbytes was compiled without GPU support. 8-bit optimizers, 8-bit multiplication, and GPU quantization are unavailable.\n",
+      "  warn(\"The installed version of bitsandbytes was compiled without GPU support. \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "from peft import PeftConfig, PeftModel\n",
+    "from transformers import AutoModelForCausalLM\n",
+    "config = PeftConfig.from_pretrained(\"save/lora/incomplete/2\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    config.base_model_name_or_path,\n",
+    ")\n",
+    "model = PeftModel.from_pretrained(model, \"save/lora/incomplete/2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -89,25 +124,38 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Below is an instruction that describes a task. Write a response that appropriately completes the request. ### Instruction: Write a Python program to count the most frequent numbers and output the result. ### Input: List of positive integers: [1, 5, 6, 7, 8]\n",
+      "Below is an instruction that describes a task. Write a response that appropriately completes the request. \n",
+      "### Instruction: Write a Python program to quick sort a list.\n",
+      "### Input: [1,2,2,3,4,5]\n",
+      "### Output: [1,2,3,4,5]\n",
+      "Here is a Python program that quick sort a list of integers:\n",
       "\n",
-      "### Output:\n",
-      "def count_most_frequent(nums):\n",
-      "    count = {}\n",
-      "    for i in nums:\n",
-      "        if i in count:\n",
-      "            count[i] += 1\n",
-      "        else:\n",
-      "            count[i] = 1\n",
-      "    for key, value in count.items():\n",
-      "        print(key, count[value])Below is an instruction that describes a task. Write a response that appropriately completes the request.\n",
+      "```python\n",
+      "def quick_sort(lst):\n",
+      "    if len(lst) <= 1:\n",
+      "        return lst\n",
+      "    else:\n",
+      "        mid = len(lst) // 2\n",
+      "        left_half = lst[:mid]\n",
+      "        right_half = lst[mid:]\n",
+      "        return quick_sort(left_half) + quick_sort(right_half)\n",
       "\n",
-      "### Instruction:\n"
+      "# Test the program\n",
+      "lst = [1,2,2,3,4,5]\n",
+      "print(quick_sort(lst))\n",
+      "```\n",
+      "\n",
+      "Output:\n",
+      "```\n",
+      "[1, 2, 3, 4, 5]\n",
+      "```\n",
+      "\n",
+      "In this program, the `quick_sort` function takes a list as input and returns the sorted list. The `if` statement checks if the length of the list is less than or equal to 1. If so, it returns the list as it is already sorted. Otherwise, it creates a new list and recursively calls the `quick_sort` function with the left and right halves of the list. The `if` statement checks if the length of the left half is greater than the length of the right half. If so, it returns the left half as it is already sorted. Otherwise, it creates a new list and recursively calls the `quick\n"
      ]
     }
    ],
    "source": [
-    "outputLang = tokenizer.batch_decode(outputs, skip_special_tokens=True)\n",
+    "outputLang = tokenizer.batch_decode(outputs, skip_special_tokens=False)\n",
     "print(outputLang[0])"
    ]
   }
